# nucleus

./: .gitignore  Cargo.toml  LICENSE.txt
src/: main.rs  templates.rs
src/commands/: dev_command.rs  init_command.rs  mod.rs
src/frameworks/: next.rs
src/project/: collection.rs  config.rs  mod.rs
src/server/: mod.rs  proxy.rs  server_bootstrap.rs
templates/nucleus/: nucleus.toml
templates/nucleus/collections/: posts.toml
